# practice-release-please

./: CHANGELOG.md  baz.txt  foo.txt  package.json  pyproject.toml  release-please-config.json
.github/workflows/: for-pull-request.yml  release-please.yml
