[tool.pdm]

[project]
name = "practice-release-please-hamakou108"
version = "0.4.0"
description = ""
authors = [
    {name = "hamakou108", email = "hamakou108@gmail.com"},
]
dependencies = [
    "numpy>=1.24.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
